<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.DocumentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center|center_vertical"
            android:id="@+id/loading">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar" />
            <TextView
                android:id="@+id/loadingMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="CONVERTING" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/documentWrapper"
            android:visibility="gone">
            <WebView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/documentView" />
        </LinearLayout>
    </LinearLayout>
</layout>
